# mini_snowflake

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
scripts/: quick_test.py
services/_core/: pyproject.toml
services/coordinator/: pyproject.toml
services/worker/: pyproject.toml
src/mini_snowflake/benchmark/: data_gen.py  data_gen.yml
src/mini_snowflake/common/: catalog.py  db_conn.py  io_parquet.py  manifest.py  models.py  utils.py
src/mini_snowflake/data/: sample_data.csv
src/mini_snowflake/data/dummy_db/: catalog.json
src/mini_snowflake/data/dummy_db/dummy_table/: manifest.json  shard-0.parquet  shard-1.parquet  shard-2.parquet
src/mini_snowflake/orchestrator/: api.py  models.py  orchestrator.py  query_maker.py  worker_registry.py
src/mini_snowflake/orquestator/: create_drop_table.py  sql_commands.py
src/mini_snowflake/orquestrator/: api.py  client.py  models.py  orquestrator.py  query_maker.py  worker_registry.py
src/mini_snowflake/parser/: models.py  parser.py
src/mini_snowflake/worker/: api.py  client.py  config.py  main.py  models.py  worker.py
