[project]
name = "mini_snowflake_coordinator"
version = "0.1.0"
description = "Coordinator service for mini_snowflake"
requires-python = ">=3.11"
dependencies = [
  { path = "../../libs/core", develop = true },
  "click>=8.1"
]

[project.scripts]
mini-snow-plan = "mini_snowflake_coordinator.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
