[project]
name = "mini_snowflake_worker"
version = "0.1.0"
description = "Worker service for mini_snowflake"
requires-python = ">=3.11"
dependencies = [
  { path = "../../libs/core", develop = true },
  "click>=8.1"
]

[project.scripts]
mini-snow-worker = "mini_snowflake_worker.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"